--- a/platform/android/res/values-en/strings.xml
+++ b/platform/android/res/values-en/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string name="app_name">Gato</string>
+    <string name="app_name">Cat</string>
 </resources>
